# CryptoStreamV2

./: APLICACION_LOCAL.md  CAMBIOS_PENDIENTES.md  CHECKLIST_DESPLIEGUE.md  COMANDOS_RAPIDOS.md  Contrato.md  DEPLOYMENT.md  GUIA_DESPLIEGUE_COMPLETA.md  INDICE.md  INSTRUCCIONES_VIDEO_HTML.txt  MONGODB_SETUP.md  NUEVA_FUNCION_UPLOAD.txt  Prinicipal.html  README.md  RESUMEN_EJECUTIVO.md  netlify.toml  package.json  update-video-html.ps1  update_video_html.py  video.html
backend/: .env  .env.example  index.js  package-lock.json  package.json
backend/config/: db.js
backend/controllers/: videosController.js
backend/data/: db.json
backend/models/: Video.js  videoModel.js
backend/routes/: videos.js
backend/services/: pinataService.js
contract-stellar/cryptostream_contract/: Cargo.toml  build_deploy.sh
contract-stellar/cryptostream_contract/src/: lib.rs
contract-stellar/passkey_wallet/: Cargo.toml
contract-stellar/passkey_wallet/src/: lib.rs
frontend/js/: api.js  app.js  freighter.js  passkey.js  ui.js
frontend/public/: Prinicipal.html  index.html  video.html
frontend/public/js/: config.js  passkey-auth.js  stellar-wallet.js  ui-controller.js  upload-manager.js  user-identity.js  video-manager.js
