[package]
name = "cryptostream_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"        # recomendado para WASM
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
soroban-sdk = "23.2.1"

[dev-dependencies]
soroban-sdk = { version = "23.2.1", features = ["testutils"] }
